# hexfish

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  pyfishcrypt.py  pyproject.toml  readme.md  setup.py
hexfish/: __init__.py  blowcrypt.py  compat.py  config.py  crypto.py  dh1080.py  hexfish.py  mircrypt.py  plugin.py  text.py  xchat.py
hexfish/tests/: test_blowcrypt.py  test_config.py  test_plugin.py
